# mnist_vector_search

./: README.md  demo.ipynb  insert.ipynb  pyproject.toml
mnist_features_128_dim_1000/feature_results/: feature_results.json
